# course-work-minesweaper

./: CMakeLists.txt
_cmake_modules/: FindSDL2.cmake  copy_resources.cmake
cmake_modules/: copy_resources.cmake
include/: Background.h  Button.h  Minefield.h  ResetButton.h  Utilities.h  main.h
sources/: Background.cpp  Button.cpp  Minefield.cpp  ResetButton.cpp  Utilities.cpp  main.cpp
